--- a/views/partials/user_details/general.hbs
+++ b/views/partials/user_details/general.hbs
@@ -32,6 +32,29 @@
   </div>
 
   <div class="form-group">
+    <label for="person_of_contact_inp" class="control-label">People of contact</label>
+    <ul class="list-group no-bottom-space">
+      {{# each people_of_contact }}
+        <li class="list-group-item">
+          <span><a href='/users/edit/{{ this.id }}'>{{ this.full_name }}</a> <button type="submit" name="remove_person_of_contact_id"
+              value="{{this.id}}" class="pull-right btn btn-link btn-xs"><i class="fa fa-trash"></i> Remove</button><span>
+        </li>
+      {{/ each }}
+
+      <li class="list-group-item">
+        <span>&nbsp;
+          <a class="pull-right btn btn-link btn-xs" data-vpp-add-new-person-of-contact="1" data-toggle="modal"
+            data-target="#add_person_of_contact_modal" data-employee_id="{{employee.id}}"
+            data-employee_name="{{employee.name}}">
+            <i class="fa fa-plus"></i> Add new people of contact
+          </a>
+        </span>
+      </li>
+    </ul>
+    <span id="department_help" class="help-block">Users who will be notified when an employee submits a leave request.</span>
+  </div>
+
+  <div class="form-group">
       <label for="admin_inp" class="control-label">
         <input class="" id="admin_inp" name="admin" type="checkbox" {{# if employee.admin}} checked="checked"  {{/if}} >
         Is administrator user
@@ -96,3 +119,5 @@
 </div>
 
 </form>
+
+{{> user_details/people_of_contact_modal employee=employee }}
